kubernetes/db-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ../kubernetes/
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: db-postgres
  name: db-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ../kubernetes/
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/net-app: "true"
        io.kompose.service: db-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: envs--postgres
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: envs--postgres
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: envs--postgres
          image: postgres:12
          name: db-postgres
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-postgres-claim0
      restartPolicy: Always
      volumes:
        - name: db-postgres-claim0
          persistentVolumeClaim:
            claimName: db-postgres-claim0
status: {}
