kubernetes/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - http:
      paths:
      - path: /service-frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
